--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,14 +2,40 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+
+
+
+
+
+
+
+
+
+
+
+
+
     -->
 
     <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
+
+
+
+
+
+
+
+
+
+
+
+
+
         -->
     </style>
 
@@ -45,6 +71,20 @@
         <item name="colorAccent">@null</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBarOverlay">true</item>
+
+    </style>
+
+    <style name="ThemeReg" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/holo_red_dark</item>
+        <item name="colorPrimaryDark">@null</item>
+        <item name="actionBarDivider">@null</item>
+        <item name="elevation">0dip</item>
+        <item name="backgroundStacked">@null</item>
+        <item name="backgroundSplit">@null</item>
+        <item name="colorAccent">@null</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowActionBarOverlay">true</item>
+
     </style>
 
     <style name="Widget.ActionBar.Transparent" parent="@style/Widget.AppCompat.ActionBar">
