--- a/app/src/main/res/layout/fragment_registration_check.xml
+++ b/app/src/main/res/layout/fragment_registration_check.xml
@@ -1,201 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/scroll_view"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#e5e5e5" >
+    android:layout_height="fill_parent"
+    android:background="@color/holo_red_light"
+    android:orientation="vertical"
+    android:padding="10.0dip">
+
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
-        android:padding="8.0dip" >
+        android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="6.0dip"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:src="@drawable/log_in_screen_logo" />
+
+        <Spinner
+            android:id="@+id/registration_country"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/panel"
-            android:orientation="vertical" >
+            android:layout_marginBottom="16.0dip"
+            android:layout_marginTop="16.0dip"
+            android:ellipsize="end"
+            android:focusableInTouchMode="false"
+            android:background="@color/holo_gray_light"
+            android:gravity="center"
+            android:inputType="none"
+            android:prompt="@string/spinner_prompt"
+            android:singleLine="true" />
 
-            <com.widget.CustomTextView
-                style="@style/Text.Description"
-                android:layout_width="fill_parent"
-                android:layout_height="0dip"
-                android:layout_weight="1.0"
-                android:paddingBottom="8.0dip"
-                android:paddingLeft="12.0dip"
-                android:paddingRight="12.0dip"
-                android:paddingTop="12.0dip"
-                android:text="@string/register_sms_one_time" />
-        </LinearLayout>
-
-        <LinearLayout
+        <com.widget.CustomTextView
+            android:id="@+id/register_phone_country_code"
+            style="@style/MuseoSansRounded_300_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6.0dip"
-            android:background="@drawable/panel"
-            android:orientation="vertical" >
+            android:gravity="start"
+            android:visibility="gone" />
+
+        <RelativeLayout
+            android:id="@+id/registration_fields"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16.0dip"
+            android:layout_marginLeft="12.0dip"
+            android:layout_marginRight="12.0dip"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <com.widget.CustomTextView
-                style="@style/Text.Description"
-                android:layout_width="fill_parent"
-                android:layout_height="0dip"
-                android:layout_weight="1.0"
-                android:paddingBottom="0.0dip"
-                android:paddingLeft="12.0dip"
-                android:paddingRight="12.0dip"
-                android:paddingTop="12.0dip"
-                android:text="@string/register_phone_number_code_confirm" />
-
-            <com.widget.CustomTextView
-                android:id="@+id/register_phone_country"
-                style="@style/Text.FieldHeader"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:visibility="gone" />
-
-            <Spinner
-                android:id="@+id/registration_country"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16.0dip"
-                android:layout_marginLeft="12.0dip"
-                android:layout_marginRight="12.0dip"
-                android:ellipsize="end"
-                android:focusableInTouchMode="false"
-                android:gravity="center"
-                android:inputType="none"
-                android:prompt="@string/spinner_prompt"
-                android:singleLine="true" />
-
-            <com.widget.CustomTextView
-                android:id="@+id/register_phone_country_code"
+                android:id="@+id/plus"
                 style="@style/MuseoSansRounded_300_text"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="start"
-                android:visibility="gone" />
-
-            <LinearLayout
-                android:id="@+id/registration_fields"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16.0dip"
-                android:layout_marginLeft="12.0dip"
-                android:layout_marginRight="12.0dip"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <com.widget.CustomTextView
-                    style="@style/MuseoSansRounded_300_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/plus"
-                    android:textColor="#ffb8b8b8"
-                    android:textSize="20.0sp" />
-
-                <com.widget.CustomTextView
-                    android:id="@+id/registration_cc"
-                    style="@style/MuseoSansRounded_300_text"
-                    android:layout_width="54.0dip"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:clickable="true"
-                    android:singleLine="true"
-                    android:textColor="#ff880000"
-                    android:textSize="20sp" />
-
-                <com.widget.CustomEditText
-                    android:id="@+id/registration_phone"
-                    android:layout_width="0.0dip"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.0"
-                    android:ellipsize="end"
-                    android:hint="@string/dummy_mobile_number_ID"
-                    android:imeOptions="actionDone"
-                    android:inputType="phone"
-                    android:selectAllOnFocus="true"
-                    android:singleLine="true"
-                    android:textColor="#ff000000"
-                    android:textColorHint="#ff888888"
-                    app:font="MuseoSansRounded-300.otf" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/registration_password_field"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16.0dip"
-                android:layout_marginLeft="12.0dip"
-                android:layout_marginRight="12.0dip"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <com.widget.CustomTextView
-                    android:id="@+id/TextView01"
-                    style="@style/MuseoSansRounded_300_text"
-                    android:layout_width="54.0dip"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:singleLine="true"
-                    android:text="@string/password_field"
-                    android:textColor="#ff020202"
-                    android:textSize="@dimen/pass_dimen"
-                    android:textStyle="bold" />
-
-                <com.widget.CustomEditText
-                    android:id="@+id/check_reg_pass"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="18dip"
-                    android:layout_marginStart="18dip"
-                    android:layout_weight="1"
-                    android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
-                    android:ems="10"
-                    android:hint="@string/register_password"
-                    android:imeOptions="actionDone"
-                    android:inputType="textWebPassword"
-                    android:lines="1"
-                    android:maxLines="1"
-                    android:paddingEnd="32.0sp"
-                    android:paddingLeft="10.0sp"
-                    android:paddingRight="32.0sp"
-                    android:paddingStart="10.0sp"
-                    android:singleLine="true"
-                    android:textColor="#ff000000"
-                    android:textColorHint="#ff888888"
-                    app:font="MuseoSansRounded-300.otf" />
-            </LinearLayout>
-
-            <com.widget.CustomButton
-                android:id="@+id/registration_submit"
-                style="@style/MuseoSansRounded_700_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dip"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
-                android:background="@drawable/btn_blue"
-                android:minHeight="0.0dip"
-                android:text="@string/Ok"
-                android:textSize="17.0sp" />
+                android:layout_marginTop="4dip"
+                android:text="@string/plus"
+                android:textColor="#ff000000"
+                android:textSize="20.0sp" />
 
             <com.widget.CustomTextView
-                android:id="@+id/warningText"
+                android:id="@+id/registration_cc"
                 style="@style/MuseoSansRounded_300_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_toRightOf="@+id/plus"
+                android:layout_marginTop="4dip"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dip"
-                android:gravity="center"
+                android:layout_marginLeft="5dip"
+                android:clickable="true"
                 android:singleLine="true"
-                android:text="@string/Warning_no_number"
-                android:textColor="#ff880000"
+                android:textColor="#ff000000"
                 android:textSize="20sp" />
-        </LinearLayout>
-    </LinearLayout>
 
-</ScrollView>
+            <com.widget.CustomEditText
+                android:id="@+id/registration_phone"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:hint="@string/dummy_mobile_number_ID"
+                android:imeOptions="actionDone"
+                android:inputType="phone"
+                android:paddingLeft="60.0sp"
+                android:paddingStart="60.0sp"
+                android:paddingEnd="0.0sp"
+                android:paddingRight="0.0sp"
+                android:selectAllOnFocus="true"
+                android:singleLine="true"
+                android:textColor="#ff000000"
+                android:textSize="20.0sp"
+                android:textColorHint="#ddffffff"
+                app:font="MuseoSansRounded-300.otf" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/registration_password_field"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16.0dip"
+            android:layout_marginLeft="12.0dip"
+            android:layout_marginRight="12.0dip"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <com.widget.CustomTextView
+                android:id="@+id/TextView01"
+                style="@style/MuseoSansRounded_700_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dip"
+                android:singleLine="true"
+                android:text="@string/password_field"
+                android:textColor="#ff020202"
+                android:textSize="@dimen/pass_dimen"
+                android:textStyle="bold" />
+
+            <com.widget.CustomEditText
+                android:id="@+id/check_reg_pass"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
+                android:ems="10"
+                android:hint="@string/register_password"
+                android:imeOptions="actionDone"
+                android:inputType="textWebPassword"
+                android:lines="1"
+                android:maxLines="1"
+                android:paddingLeft="60.0sp"
+                android:paddingStart="60.0sp"
+                android:paddingEnd="0.0sp"
+                android:paddingRight="0.0sp"
+                android:singleLine="true"
+                android:textColor="#ff000000"
+                android:textColorHint="#ddffffff"
+                app:font="MuseoSansRounded-300.otf" />
+        </RelativeLayout>
+
+        <com.widget.CustomButton
+            android:id="@+id/registration_submit"
+            style="@style/MuseoSansRounded_700_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dip"
+            android:layout_marginRight="50dip"
+            android:layout_marginTop="20dip"
+            android:background="@drawable/btn_blue"
+            android:minHeight="0.0dip"
+            android:text="@string/log_in"
+            android:textSize="20.0sp" />
+
+        <com.widget.CustomTextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dip"
+            android:gravity="center"
+            android:text="Sign up"
+            android:textColor="#ffffff"
+            android:textSize="20dip" />
+    </LinearLayout>
+</LinearLayout>
