--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <item name="action_refresh" type="id"></item>
-    <item name="selected_view" type="id"/>
+    <item name="selected_view" type="id" />
     <item name="container" type="id"></item>
     <item name="list" type="id"></item>
     <item name="swiperefresh" type="id"></item>
@@ -60,5 +60,6 @@
     <item name="emergency_checkBox" type="id"></item>
     <item name="done_button" type="id"></item>
     <item name="progress_view" type="id"></item>
+    <item name="registration_view_switcher" type="id"></item>
 
 </resources>
