--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -26,6 +27,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
+                    app:font="MuseoSansRounded-700.otf"
                     android:layout_marginLeft="15dip"
                     android:layout_marginTop="15dip"
                     android:text="From:"
@@ -35,6 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dip"
+                    app:font="MuseoSansRounded-300.otf"
                     android:layout_marginTop="15dip"
                     android:layout_toRightOf="@+id/from"
                     android:text="From:"
@@ -46,6 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
+                    app:font="MuseoSansRounded-700.otf"
                     android:layout_marginRight="15dip"
                     android:layout_marginTop="15dip"
                     android:text="400"
@@ -57,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dip"
-
+                app:font="MuseoSansRounded-300.otf"
                 android:hint="Write your feedback..."
                 android:maxLength="400"
                 android:scrollbars="vertical"
