--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="#f9f9f9">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#f9f9f9">
@@ -34,13 +34,15 @@
                     android:textSize="20sp" />
 
                 <com.widget.CustomTextView
+                    android:id="@+id/mobile_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dip"
                     app:font="MuseoSansRounded-300.otf"
+                    android:textColor="#000000"
                     android:layout_marginTop="15dip"
                     android:layout_toRightOf="@+id/from"
-                    android:text="From:"
+                    android:text="@string/dummy_mobile_number_ID"
                     android:textSize="20sp" />
 
                 <com.widget.CustomTextView
@@ -57,6 +59,7 @@
             </RelativeLayout>
 
             <com.widget.CustomEditText
+                android:id="@+id/feedback_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dip"
