--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="#f9f9f9">
+    android:background="#f9f9f9"
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -27,23 +27,23 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    app:font="MuseoSansRounded-700.otf"
                     android:layout_marginLeft="15dip"
                     android:layout_marginTop="15dip"
                     android:text="From:"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    app:font="MuseoSansRounded-700.otf" />
 
                 <com.widget.CustomTextView
                     android:id="@+id/mobile_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dip"
-                    app:font="MuseoSansRounded-300.otf"
-                    android:textColor="#000000"
                     android:layout_marginTop="15dip"
                     android:layout_toRightOf="@+id/from"
                     android:text="@string/dummy_mobile_number_ID"
-                    android:textSize="20sp" />
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    app:font="MuseoSansRounded-300.otf" />
 
                 <com.widget.CustomTextView
                     android:id="@+id/counter"
@@ -51,11 +51,11 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    app:font="MuseoSansRounded-700.otf"
                     android:layout_marginRight="15dip"
                     android:layout_marginTop="15dip"
                     android:text="400"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    app:font="MuseoSansRounded-700.otf" />
             </RelativeLayout>
 
             <com.widget.CustomEditText
@@ -63,26 +63,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dip"
-                app:font="MuseoSansRounded-300.otf"
                 android:hint="Write your feedback..."
                 android:maxLength="400"
                 android:scrollbars="vertical"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:font="MuseoSansRounded-300.otf" />
 
             <com.widget.CustomButton
                 android:id="@+id/send"
-                style="@style/MuseoSansRounded_700_button"
                 android:layout_width="match_parent"
+                android:layout_margin="15dip"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dip"
-                android:layout_marginRight="50dip"
-                android:textColor="@color/holo_blue_dark"
-                android:layout_marginTop="20dip"
-                android:background="@drawable/btn_blue_holo"
+                android:padding="15dip"
                 android:minHeight="0.0dip"
-                android:padding="10dip"
                 android:text="@string/send_feedback"
-                android:textSize="20.0sp" />
+                android:textColor="@color/holo_blue_dark"
+                android:textSize="20.0sp"
+                app:font="MuseoSansRounded-700.otf" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
