--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -53,20 +53,15 @@
         android:id="@id/profile_details_header_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/username"
-        android:layout_marginTop="5dip"
         android:background="#00000000"
+        android:paddingTop="225dip"
         android:orientation="vertical">
-
         <include
-            android:id="@+id/profile_details"
+            android:id="@id/profile_details_body"
             layout="@layout/profile_details"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"></include>
 
-        </include>
     </LinearLayout>
 
 </RelativeLayout>
