--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,13 +41,11 @@
                 android:textStyle="bold" />
         </RelativeLayout>
 
-        <ScrollView
+        <com.widget.CustomScrollView
             android:id="@id/profile_details_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#f9f9f9">
-
-
             <LinearLayout
                 android:id="@id/profile_details_holder"
                 android:layout_width="match_parent"
@@ -175,6 +172,6 @@
                     android:background="#00000000"
                     android:orientation="vertical" />
             </LinearLayout>
-        </ScrollView>
+        </com.widget.CustomScrollView>
     </LinearLayout>
 </merge>
