--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/android">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,7 +15,7 @@
             android:background="#cc3333"
             android:orientation="horizontal">
 
-            <TextView
+            <com.widget.CustomTextView
                 android:id="@id/profile_details"
                 style="@style/ActionBarButtonStyle"
                 android:layout_width="wrap_content"
@@ -24,9 +26,10 @@
                 android:text="@string/profile_details"
                 android:textColor="#f8f8f8"
                 android:textSize="22sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:font="MuseoSansRounded-700.otf" />
 
-            <TextView
+            <com.widget.CustomTextView
                 android:id="@id/profile_edit"
                 style="@style/ActionBarButtonStyle"
                 android:layout_width="wrap_content"
@@ -38,7 +41,8 @@
                 android:text="@string/profile_edit"
                 android:textColor="#f8f8f8"
                 android:textSize="22sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:font="MuseoSansRounded-700.otf" />
         </RelativeLayout>
 
         <com.widget.CustomScrollView
@@ -46,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#f9f9f9">
+
             <LinearLayout
                 android:id="@id/profile_details_holder"
                 android:layout_width="match_parent"
@@ -53,7 +58,8 @@
                 android:layout_margin="10dip"
                 android:orientation="vertical">
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-700.otf"
                     android:id="@id/profile_full_name_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -61,7 +67,8 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-300.otf"
                     android:id="@id/profile_full_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -77,7 +84,8 @@
                     android:background="@drawable/feed__list_item_background"
                     android:orientation="vertical" />
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-700.otf"
                     android:id="@id/profile_mobile_number_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -85,9 +93,10 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <com.widget.CustomTextView
                     android:id="@id/profile_mobile_number"
                     android:layout_width="match_parent"
+                    app:font="MuseoSansRounded-300.otf"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dip"
                     android:text="@string/dummy_mobile_number_ID"
@@ -101,7 +110,8 @@
                     android:background="@drawable/feed__list_item_background"
                     android:orientation="vertical" />
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-700.otf"
                     android:id="@id/profile_area_name_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -109,7 +119,8 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-300.otf"
                     android:id="@id/profile_area_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -125,7 +136,8 @@
                     android:background="@drawable/feed__list_item_background"
                     android:orientation="vertical" />
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-700.otf"
                     android:id="@id/profile_blood_group_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -133,7 +145,8 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-300.otf"
                     android:id="@id/profile_blood_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -149,7 +162,8 @@
                     android:background="@drawable/feed__list_item_background"
                     android:orientation="vertical" />
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-700.otf"
                     android:id="@+id/profile_blood_donation_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -157,7 +171,8 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <com.widget.CustomTextView
+                    app:font="MuseoSansRounded-300.otf"
                     android:id="@+id/profile_blood_donation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -167,8 +182,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="1dip"
-                    android:layout_margin="10dip"
+                    android:layout_height="10dip"
                     android:background="#00000000"
                     android:orientation="vertical" />
             </LinearLayout>
