--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="holo_blue_bright">#ff00ddff</color>
     <!-- A really bright Holo shade of gray -->
     <color name="holo_gray_bright">#33CCCCCC</color>
+    <color name="background_tab_pressed">#6633B5E5</color>
     <color name="holo_gray_dark">#CCCCCC</color>
-    <color name="holo_gray_puredark">#AAAAAA</color>    
+    <color name="holo_gray_puredark">#AAAAAA</color>
 </resources>
