--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,8 @@
     <dimen name="shadow_width">20dp</dimen>
     <dimen name="slidingmenu_offset">50dp</dimen>
     <dimen name="pass_dimen">20sp</dimen>
+    <dimen name="header_height">298dp</dimen>
+    <dimen name="min_header_height">250dp</dimen>
+    <dimen name="header_logo_size">100dp</dimen>
 
 </resources>
