--- a/app/src/main/res/layout/request_feed_actionbar.xml
+++ b/app/src/main/res/layout/request_feed_actionbar.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:text="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:background="#00000000"
-    android:layout_height="fill_parent" >
+    android:background="@color/holo_red_light"
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:id="@+id/actionbar_title"
@@ -14,7 +14,7 @@
         android:clickable="true"
         android:gravity="start|center"
         android:orientation="horizontal"
-        android:padding="0.0dip" >
+        android:padding="0.0dip">
 
 
         <com.widget.CustomTextView
