--- a/app/src/main/res/layout/request_feed_actionbar.xml
+++ b/app/src/main/res/layout/request_feed_actionbar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:text="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:background="@color/holo_red_light"
+    android:background="@android:color/transparent"
     android:layout_height="fill_parent">
 
     <LinearLayout
